[gd_scene load_steps=7 format=3 uid="uid://bofs37ukskcud"]

[ext_resource type="Script" path="res://model/IIROSEChat/chat_control.gd" id="1_uvoak"]
[ext_resource type="Texture2D" uid="uid://di842ykugukvd" path="res://model/IIROSEChat/back.jpg" id="2_ppupx"]

[sub_resource type="Gradient" id="Gradient_sop4p"]
offsets = PackedFloat32Array(0.012987, 0.746753, 0.876623, 0.935065)
colors = PackedColorArray(0, 0, 0, 0, 0, 0, 0, 0.322368, 0, 0, 0, 0.672868, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_of36s"]
gradient = SubResource("Gradient_sop4p")
fill_to = Vector2(0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nlvkb"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_28ddt"]
bg_color = Color(0.144063, 0.144063, 0.144062, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 10.0
expand_margin_right = 10.0

[node name="ChatControl" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_uvoak")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ppupx")
expand_mode = 1
stretch_mode = 6

[node name="TextureRect2" type="TextureRect" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_of36s")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="Control" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="mes_scroll" type="ScrollContainer" parent="VBoxContainer/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 3
metadata/_edit_use_anchors_ = true

[node name="mes_add_pos" type="VBoxContainer" parent="VBoxContainer/Control/mes_scroll"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 10
theme_override_constants/separation = 20

[node name="Panel" type="PanelContainer" parent="VBoxContainer"]
z_index = 1
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_nlvkb")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Panel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Control" type="Control" parent="VBoxContainer/Panel/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/Panel/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/focus = SubResource("StyleBoxFlat_28ddt")
theme_override_styles/normal = SubResource("StyleBoxFlat_28ddt")
caret_blink = true

[node name="Control2" type="Control" parent="VBoxContainer/Panel/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="VBoxContainer/Panel/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "->"

[node name="picture_mode" type="CheckButton" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -44.0
offset_bottom = 24.0
grow_horizontal = 0
focus_mode = 0
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
text = "图片模式"

[connection signal="text_submitted" from="VBoxContainer/Panel/MarginContainer/HBoxContainer/LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="VBoxContainer/Panel/MarginContainer/HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="toggled" from="picture_mode" to="." method="_on_check_button_toggled"]
